[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tftests"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
tftest = "^1.7.4"
pytest-xdist = "^2.5.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-n auto --maxprocesses 4"

log_cli = true
log_cli_level = "WARNING"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
